--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,7 @@
 html,
 body {
   position: relative;
+  background: #f9f9fc;
   width: 100%;
   height: 100%;
 }
@@ -16,16 +17,12 @@ body {
 }
 
 a {
-  color: rgb(0, 100, 200);
+  color: black;
   text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
-}
-
-a:visited {
-  color: rgb(0, 80, 160);
+  text-decoration: none;
 }
 
 label {
