Add results table

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,13 @@
   body {
     @apply bg-gray-200;
   }
+
+  @media (prefers-color-scheme: dark) {
+    body {
+      @apply text-gray-300 bg-gray-600;
+    }
+  }
+
   h1,
   h2,
   h3,
